UPIM/rcsdk.h

	struct RcTargetEntry
	{
		char targetId[64];		//交互方id(接收方id)
		char targetName[256];	//交互方的userid
	};
//定义全局callback
/*
jobj
{
"result":"falied/success",
"err_code":0/1,					//错误码   0-成功 非0-失败
"userId":"4378"					//描述信息 成功，返回用户id，失败，返回错误描述
}
*/
typedef void(__stdcall *ConnectAckListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"result":"falied/success",
"err_code":0/1,	//操作结果 0-成功 非0-失败
"msgUId":"",
"timestamp":12345
}
*/
typedef void(__stdcall *PublishAckListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"m_TargetId":"99",          //交互方id
"m_SenderId": "" ,          //发方id
"m_ClazzName":"",		    //类别
"m_Push":"",                //推送消息
"m_AppData":"",             //AppData
"m_ConversationType":0,     //通道类型  1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
"m_MessageId":9,            //消息id   消息在数据库中的id号
"m_Direction":0,            //消息方向  0-发送的消息 1-接收的消息
"m_ReadStatus":0,           //读取状态  0-未读 1-已读
"m_SendStatus":20,          //发送状态  10-发送中 20-发送失败 30-发送成功
"m_SendTime":9,             //接收时间
"m_RcvTime":9,              //接收时间
"m_MessageType":0		    //信息类别  0-实时接收信息 1-历史漫游
}
*/
typedef void(__stdcall *MessageListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"nstatus":1,
"data":"reason"
}
*/
typedef void(__stdcall *ExceptionListenerCallback)(const wchar_t* json_str);
	/**
	*  初始化全局实例
	*
	*  @param appid        应用id(appkey)
	*  @param appName      应用名称
	*  @param deviceId     设备id
	*  @param localPath    缓存路径
	*  @param databasePath 数据库存储路径
	*
	*  @return client指针   NULL - 失败 非NULL - 成功
	*/

	WIN_RCSDK_API void* InitClient(const char *appId, const char* appName, const char* deviceId, const wchar_t* localPath, const wchar_t* databasePath);
	/**
	*  建立服务器连接
	*
	*  @param token    登录token，由后台配置从网站得到
	*  @param callback 监听连接结果通过监听中的函数通知
	*/

	WIN_RCSDK_API void Connect(const char* token, ConnectAckListenerCallback callback,bool ipv6 = false);
	/**
	*  断开服务器连接，不会删除全局实例
	*
	*  @param state 断开时指定的状态 
	*  2 断开连接收推送 
	*  4 断开连接不收推送
	*/
	WIN_RCSDK_API void Disconnect(int state);
	/**
	*  iOS设置DeviceToken
	*
	*  @param deviceId DeviceToken
	*/
	WIN_RCSDK_API void SetDeviceId(const char* deviceId);
	/**
	*  设置消息监听
	*
	*  @param callback 消息监听器
	*/
	WIN_RCSDK_API void SetMessageListener(MessageListenerCallback callback);
	/**
	*  设置异常监听
	*
	*  @param callback 异常监听器
	*/
	WIN_RCSDK_API void SetExceptionListener(ExceptionListenerCallback callback);
	/**
	*  注册信息类别
	*
	*  @param clazzName   信息类别
	*  @param operateBits 操作位 1(00000001) - 是否入库 2(00000010) - 是否标记为已读
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool RegisterMessageType(const char* clazzName, const unsigned int operateBits);
	/**
	*  备注：
	*  上层定义的 PRIVATE DISCUSSION 等值需要与此对应，因为暂时的CHATROOM和TEMPGROUP都未使用，
	*  使用时，这两个值需匹配上。
	*  PB中通道的定义如下
	*  enum ChannelType
	*  {
	*      PERSON = 1,
	*      PERSONS = 2,
	*      GROUP = 3,
	*      TEMPGROUP = 4,
	*      CUSTOMERSERVICE = 5
	*  };
	*/

	/*
	************************************************
	*  会话处理相关函数
	************************************************
	*/

	/**
	*  发送消息
	*
	*  @param targetId     交互方id(接收方id)
	*  @param categoryId   通道类型
	1 - PRIVATE             单人
	2 - DISCUSSION          讨论组
	3 - GROUP               群组
	4 - CHATROOM            聊天室
	5 - CUSTOMERSERVICE     客服
	6 - SYSTEM              系统消息
	7 - MC                  MC消息应用公众服务
	8 - MP                  MP消息公众服务平台
	*  @param transferType 传输类别
	1 - S 消息数据服务器不缓存，不保证信息到达接收方
	2 - N 消息数据服务器缓存，交互方会收到通知消息
	3 - P 消息数据服务器缓存，交互方不在线会收到PUSH消息
	*  @param clazzname    消息类别(RC:ImgMsg RC:VcMsg RC:NtfMsg RC:StMsg)
	*  @param message      消息内容 json内容
	*  @param messageId    消息id 消息在数据库中的Id
	*  @param callback     发送监听
	*/

	WIN_RCSDK_API void sendMessage(const char* targetId, int categoryId, int transferType, const char* clazzname, const wchar_t* message, const char* push, const char* appData, int messageId, PublishAckListenerCallback callback);