Other/IMCRM.ClientDemo/SDK/rcsdk.cs

using System;
using System.Collections.Generic;
using System.Linq;
using System.Runtime.InteropServices;
using System.Text;
using System.Threading.Tasks;

namespace rcsdk_test
{
   public struct RcTargetEntry
    {
        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 64)]
        public string targetId;
        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
        public string targetName;
    }

    //rcsdk callbacks
    /*
    jobj
    {
    "result":"falied/success",
    "err_code":0/1, //错误码   0-成功 非0-失败
    "userId":"4378" //描述信息 成功，返回用户id，失败，返回错误描述
    }
    */
    public delegate void ConnectAckListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "result":"success/failed"
    "err_code":0,   //错误码   0-成功 非0-失败
    "data":""       //黑名单用户列表 多个id以回车分割
    }
    */
    public delegate void BlacklistInfoListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "opStatus":0, //操作结果    0-成功 非0-失败
    "bizStatus":0 //业务数据值  根据具体业务返回响应的业务数据值
    }
    */
    public delegate void BizAckListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "result":"falied/success",
    "err_code":0/1 //操作结果 0-成功 非0-失败
    }
    */
    public delegate void PublishAckListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    public delegate void ChatroomInfoListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);
    /*
    jobj
    {
    "data":"hello", //信息描述
    }
    */
    public delegate void NaviDataListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "result":"falid/success",
    "userId":"7788",//用户id
    "err_code":0/1,//错误码 0-成功 1-失败
    "userName":"1122"//用户名称
    "userPortrait" : "http://wejgilgldja.jfa" //用户头像
    }
    */
    public delegate void UserInfoListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "result":"falid/success",
    "discussionId":"7788",  //讨论组id
    "err_code":0/1          //错误码
    }
    */
    public delegate void CreateDiscussionListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "process": 7       //进度值
    }
    jobj
    {
        "result":"falid/success",
        "url":"http//....",               //信息描述 成功，返回图片uri 失败 返回错误描述
        "err_code":0/1              //错误码 0 - 成功 非0 - 失败
    }
    */
    public delegate void ImageListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "result":"falid/success",
    "err_code":0/1,     //错误码
    "startTime":"1122"  //开始时间
    "spanMins" : 11221  //时间间隔
    }
    */
    public delegate void PushSettingListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    CsharpCMessageInfo
    jobj
    {
    "m_TargetId":"99",          //交互方id
    "m_SenderId": "" ,          //发方id
    "m_ClazzName":"",		    //类别
    "m_ExtraMessage":"",        //信息
    "m_ExtraMessage":"",        //附加信息
    "m_Push":"",                //推送消息
    "m_AppData":"",             //AppData
    "m_ConversationType":0,     //通道类型  1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
    "m_MessageId":9,            //消息id    消息在数据库中的id号
    "m_Direction":0,            //消息方向  0-发送的消息 1-接收的消息
    "m_ReadStatus":0,           //读取状态  0-未读 1-已读
    "m_SendStatus":20,          //发送状态  10-发送中 20-发送失败 30-发送成功
    "m_SendTime":9,             //接收时间
    "m_RcvTime":9,              //接收时间
    "m_MessageType":0		    //信息类别  0-实时接收信息 1-历史漫游
    }
    */
    public delegate void MessageInfoEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);
    //json_str同上 
    public delegate void MessageListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "length":1, //数据长度
    "data":""   //数据
    }
    */
    public delegate void DataBufferEventHander([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "nstatus": 31010 (RC_DISCONN_KICK)网络被踢  30002 (RC_NET_UNAVAILABLE)网络不可用  30011(RC_SOCKET_DISCONNECTED)网络超时 30013(RC_PONG_RECV_FAIL)心跳包超时 timeout of recv of socket   //异常状态码
    "data":""       //异常描述
    }
    */
    public delegate void ExceptionListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    AccountInfo
    jobj
    {
    "m_AccountId":"99",         //账号id
    "m_AccountName": "" ,       //账号id
    "m_AccountUri":"",			//uri
    "m_Extra":"",			    //附加信息
    "m_AccountType":9,          //账号类别
    "m_LastTime":9				//最近时间
    }
    */
    public delegate void AccountInfoEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "result":"falid/success",
    "count":0       //数量
    "data":jobj,    //CsharpDiscussionInfo 请参见下面讨论组数据结果
    "err_code":0/1  //错误码
    }
    */
    public delegate void DiscussionInfoListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    CsharpDiscussionInfo
    jobj
    {
    "m_Id":"99",            //讨论组或群组id
    "m_Name": "" ,          //讨论组名称
    "m_AdminId":"",         //管理员id
    "m_UserIds":"",         //群组成员id,使用\n分割
    "m_ConversationType":1, //通道类型 1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
    "m_InviteStatus":0,     //开放邀请状态   0 - 开放邀请 1 - 关闭开放邀请
    "m_BlockPush":0         //新消息通知阻止状态 0 - 未阻止 100 - 阻止
    }
    */
    public delegate void DisInfoSyncEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    CsharpUserInfo
    jobj
    {
    "m_Id":"99",                //用户id
    "m_Name": "" ,              //用户名
    "m_Portrait":"",            //用户url
    "m_AccountExtra":"",        //用户account
    "m_categoryId":9,           //类别id
    "m_BlockPush":9,            //新消息通知阻止状态 0 - 未阻止 100 - 阻止
    }
    */
    public delegate void UserInfoEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    CsharpConversation
    {
    CsharpConversationInfo
    "m_TargetId":"99",          //会话id
    "m_Title": "" ,             //回话标题
    "m_Draft":"",               //会话草稿
    "m_ConversationType":9,     //会话类型 单聊 群聊 讨论组 。。。
    "m_IsTop":9,                //会话是否置顶
    "m_BlockPush":9,            //是否要push消息
    "m_GroupStatus":9,          //讨论组状态
    "m_UnreadCount":9,          //未读消息数
    "m_LastTime":9,             //最近会话时间

    CsharpCMessageInfo
    {
    "m_TargetId":"99",          //交互方id
    "m_SenderId": "" ,          //发方id
    "m_ClazzName":"",		    //类别
    "m_ExtraMessage":"",        //信息
    "m_ExtraMessage":"",        //附加信息
    "m_Push":"",                //推送消息
    "m_AppData":"",             //AppData
    "m_ConversationType":0,     //通道类型  1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
    "m_MessageId":9,            //消息id   消息在数据库中的id号
    "m_Direction":0,            //消息方向  0-发送的消息 1-接收的消息
    "m_ReadStatus":0,           //读取状态  0-未读 1-已读
    "m_SendStatus":20,          //发送状态  10-发送中 20-发送失败 30-发送成功
    "m_SendTime":9,             //接收时间
    "m_RcvTime":9,              //接收时间
    "m_MessageType":0		    //信息类别  0-实时接收信息 1-历史漫游
    }

    CsharpUserInfo
    {
    "m_Id":"99",                //用户id
    "m_Name": "" ,              //用户名
    "m_Portrait":"",            //用户url
    "m_AccountExtra":"",        //用户account
    "m_categoryId":9,           //类别id
    "m_BlockPush":9,            //新消息通知阻止状态 0 - 未阻止 100 - 阻止
    }
    */
    public delegate void ConversationInfoEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    /*
    jobj
    {
    "result":"success/failed"
    "err_code":1,           //错误码 0 - 成功 非0 - 失败
    "data":""               //信息描述 成功，上传返回上传token，下载返回图片uri 失败 返回错误描述
    }
   */
    public delegate void TokenListenerEventHandler([MarshalAs(UnmanagedType.LPWStr)] string json_str);

    unsafe class rcsdk
    {
        /**
        *  初始化全局实例
        *
        *  @param appid        应用id
        *  @param appName      应用名称
        *  @param deviceId     设备id
        *  @param localPath    缓存路径
        *  @param databasePath 数据库存储路径
        *
        *  @return client指针   NULL - 失败 非NULL - 成功
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr InitClient(string appId, string appName, string deviceId, [MarshalAs(UnmanagedType.LPWStr)] string localPath, [MarshalAs(UnmanagedType.LPWStr)] string databasePath);

        /**
        *  建立服务器连接
        *
        *  @param token    登录token，由后台配置从网站得到
        *  @param listener 监听 连接结果通过监听中的函数通知
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Connect(string token, ConnectAckListenerEventHandler callback,bool ipv6 = false);
        /**
        *  断开服务器连接，不会删除全局实例
        *
        *  @param state 断开时指定的状态 2断开连接接受推送 4断开连接不接收推送
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Disconnect(int state);

        /**
        *  iOS设置DeviceToken
        *
        *  @param deviceId DeviceToken
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetDeviceId(string deviceId);

        /**
        *  设置消息监听
        *
        *  @param listener 消息监听器
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetMessageListener(MessageListenerEventHandler callback);

        /**
        *  设置异常监听
        *
        *  @param listener 监听器
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetExceptionListener(ExceptionListenerEventHandler callback);

        /**
        *  注册信息类别
        *
        *  @param clazzName   信息类别
        *  @param operateBits 操作位 1 - 是否入库 2 - 是否标记为已读
        *
        *  @return 操作结果 true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool RegisterMessageType(string clazzName, uint operateBits);

        /**
        *  备注：
        *  上层定义的 PRIVATE DISCUSSION 等值需要与此对应，因为暂时的CHATROOM和TEMPGROUP都未使用，
        *  使用时，这两个值需匹配上。
        *  PB中通道的定义如下
        *  enum ChannelType
        *  {
        *      PERSON = 1,
        *      PERSONS = 2,
        *      GROUP = 3,
        *      TEMPGROUP = 4,
        *      CUSTOMERSERVICE = 5
        *  };
        */

        /*
        ************************************************
        *  会话处理相关函数
        ************************************************
        */

        /**
        *  发送消息
        *
        *  @param targetId     交互方id
        *  @param categoryId   通道类型
        1 - PRIVATE             单人
        2 - DISCUSSION          讨论组
        3 - GROUP               群组
        4 - CHATROOM            聊天室
        5 - CUSTOMERSERVICE     客服
        6 - SYSTEM              系统消息
        7 - MC                  MC消息
        8 - MP                  MP消息
        *  @param transferType 传输类别
        1 - S 消息数据服务器不缓存，不保证信息到达接收方
        2 - N 消息数据服务器缓存，交互方会收到通知消息
        3 - P 消息数据服务器缓存，交互方不在线会收到PUSH消息
        *  @param clazzname    消息类别
        *  @param message      消息内容 json内容
        *  @param messageId    消息id 消息在数据库中的Id
        *  @param callback     发送监听
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void sendMessage(string targetId, int categoryId, int transferType, string clazzname, [MarshalAs(UnmanagedType.LPWStr)] string message, string push, string appData, int messageId, PublishAckListenerEventHandler callback);
